--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/8004a18a14.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Flying Eagle</title>
+    <style>
+        .font-Manrope {
+            font-family: 'Manrope', sans-serif;
+        }
+    </style>
 </head>
 
-<body>
+<body class="font-Manrope">
     <header class="md:container md:mx-auto">
         <!-- ==== header first part === -->
         <nav>
@@ -33,8 +42,8 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost text-xl">
-                        <h1 class="text-4xl">Flying <span class="text-[#FF4240]">Eagle</span></h1>
+                    <a class="btn btn-ghost text-xl lg:text-4xl font-extrabold">
+                        <h1 class="">Flying <span class="text-[#FF4240]">Eagle</span></h1>
                     </a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
@@ -47,45 +56,106 @@
                     </ul>
                 </div>
                 <div class="navbar-end">
-                    <i class="fa-solid fa-magnifying-glass mr-3"></i>
-                    <button class="btn btn-primary  text-white bg-red-500 border-r-0 border-red-500">Get Ticket</button>
+                    <div">
+                        <i class="fa-solid fa-magnifying-glass mx-4 lg:mr-3"></i>
                 </div>
+                <button class="btn btn-primary  text-white bg-red-500 border-r-0 border-red-500">Get Ticket</button>
+            </div>
             </div>
         </nav>
 
         <!-- == carosol section == -->
-
-        <div class="carousel m-8 w-auto h-auto lg:w-[1570px] lg:h-[550px] mt-9">
-            <div id="slide1" class="carousel-item relative w-full">
-              <img src="Images/1.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide4" class="btn btn-circle">❮</a> 
-                <a href="#slide2" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
-            <div id="slide2" class="carousel-item relative w-full">
-              <img src="Images/4.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide1" class="btn btn-circle">❮</a> 
-                <a href="#slide3" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
-            <div id="slide3" class="carousel-item relative w-full">
-              <img src="Images/1.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide2" class="btn btn-circle">❮</a> 
-                <a href="#slide4" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
-            <div id="slide4" class="carousel-item relative w-full">
-              <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle">❮</a> 
-                <a href="#slide1" class="btn btn-circle">❯</a>
-              </div>
+        <div class="grid justify-items-center">
+            <div class="carousel  m-8 w-auto h-auto lg:w-auto lg:h-[550px] mt-9">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="Images/4.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
             </div>
-          </div>
+        </div>
+
     </header>
+
+    <!-- == Hockeys Club== -->
+
+    <section>
+        <div class="text-center">
+            <h1 class="text-4xl font-bold text-zinc-950 pb-3">
+                Professional Hockeys Club
+            </h1>
+            <p class="text-xl text-slate-600">The purpose of a club association is to look after, protect and safeguard
+                the interests of the professional clubs in Europe <br> in relations with other hockey and sports
+                authorities or organizations </p>
+        </div>
+        <div
+            class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mx-6 lg:mx-auto justify-between my-16 gap-8">
+            <!-- 1st item -->
+            <div class="card w-96 bg-base-100 shadow-xl">
+                <figure>
+                    <div class="radial-progress text-primary font-bold text-red-600" style="--value:87;"
+                        role="progressbar">87%</div>
+                </figure>
+                <div class="card-body">
+                    <h2 class="card-title font-bold">Prayer Facility</h2>
+                    <p>Multi-faith prayer rooms. Multi-faith facilities are available.</p>
+                </div>
+            </div>
+            <!-- 2nd item -->
+            <div class="card w-96 bg-base-100 shadow-xl">
+                <figure>
+                    <div class="radial-progress text-primary font-bold text-green-500" style="--value:92;"
+                        role="progressbar">92%</div>
+                </figure>
+                <div class="card-body">
+                    <h2 class="card-title font-bold">Senior Player</h2>
+                    <p>it is vital to learn with their experience.</p>
+                </div>
+            </div>
+
+            <!-- 3rd item -->
+            <div class="card w-96 bg-base-100 shadow-xl">
+                <figure>
+                    <div class="radial-progress text-primary font-bold text-yellow-400" style="--value:96;"
+                        role="progressbar">96%</div>
+                </figure>
+                <div class="card-body">
+                    <h2 class="card-title font-bold">Experienced Coach</h2>
+                    <p>we use a variety of skills to analyse individual and team performance, and provide training to
+                        improve sporting results and output</p>
+                </div>
+            </div>
+
+            <!-- 4th item -->
+            <div class="card w-96 bg-base-100 shadow-xl">
+                <figure>
+                    <div class="radial-progress text-primary font-bold text-blue-600" style="--value:84;"
+                        role="progressbar">84%</div>
+                </figure>
+                <div class="card-body">
+                    <h2 class="card-title font-bold">Training Ground</h2>
+                    <p>Nice training centre and youth academy is located .</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
