--- a/index.html
+++ b/index.html
@@ -156,6 +156,54 @@
 
         </div>
     </section>
+    <section>
+        <!-- Program Sections -->
+        <div class="text-center mb-10">
+            <h1 class="text-4xl font-bold text-zinc-950 pb-3">
+                Flying Eagle Program
+            </h1>
+            <p class="text-xl text-slate-600"><p>If you're not the next Wayne Gretzky or Bobby Orr, don't fear. we have great club hockey teams.</p>
+        </div>
+
+        <div class="container grid grid-cols-1 lg:grid-cols-2 mx-auto gap-6 justify-between ">
+            <div class="card flex w-auto bg-base-100 shadow-xl image-full">
+                <figure><img class="w-auto flex-1" src="Images/2.png" alt="" /></figure>
+                <div class="card-body">
+                  <h2 class="card-title text-2xl mt-16 text-white mb-5">Professional Program !</h2>
+                  <p class="">The flying eagle was founded as a spring and summer showcase program ranging ages 8-20, in both boys and girls tournaments starting in 2011. </p>
+                  <div class="card-actions justify-start">
+                    <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register Now!</button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card bg-base-100 shadow-xl image-full">
+                <figure><img src="Images/3.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <h2 class="card-title text-2xl mt-16 text-white mb-5">Teenager Program!</h2>
+                  <p>Our hockey club develops players to reach the next level in their careers with top-level coaching.</p>
+                  <div class="card-actions justify-start">
+                    <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register Now!</button>
+                  </div>
+                </div>
+              </div>
+        </div>
+
+        <div class="container mx-auto flex mt-10">
+            <div class="card flex-1 w-auto bg-base-100 shadow-xl image-full">
+                <figure><img class="w-auto flex-1" src="Images/4.png" alt="" /></figure>
+                <div class="card-body">
+                  <h2 class="card-title text-4xl mt-52 text-white mb-5">Professional Program !</h2>
+                  <p class="text-xl">Our focus is to provide an advanced development hockey program that encourages our players to set and achieve their goals, including their pursuit of the next level in their hockey career; develop leaders who will be successful in all areas of their life; and teach and challenge our players to be good teammates with high character. </p>
+                  <div class="card-actions justify-start">
+                    <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register Now!</button>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
