Clients Question completed

--- a/index.html
+++ b/index.html
@@ -162,47 +162,282 @@
             <h1 class="text-4xl font-bold text-zinc-950 pb-3">
                 Flying Eagle Program
             </h1>
-            <p class="text-xl text-slate-600"><p>If you're not the next Wayne Gretzky or Bobby Orr, don't fear. we have great club hockey teams.</p>
+            <p class="text-xl text-slate-600">
+            <p>If you're not the next Wayne Gretzky or Bobby Orr, don't fear. we have great club hockey teams.</p>
         </div>
 
         <div class="container grid grid-cols-1 lg:grid-cols-2 mx-auto gap-6 justify-between ">
             <div class="card flex w-auto bg-base-100 shadow-xl image-full">
                 <figure><img class="w-auto flex-1" src="Images/2.png" alt="" /></figure>
                 <div class="card-body">
-                  <h2 class="card-title text-2xl mt-16 text-white mb-5">Professional Program !</h2>
-                  <p class="">The flying eagle was founded as a spring and summer showcase program ranging ages 8-20, in both boys and girls tournaments starting in 2011. </p>
-                  <div class="card-actions justify-start">
-                    <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register Now!</button>
-                  </div>
+                    <h2 class="card-title text-2xl mt-16 text-white mb-5">Professional Program !</h2>
+                    <p class="">The flying eagle was founded as a spring and summer showcase program ranging ages 8-20,
+                        in both boys and girls tournaments starting in 2011. </p>
+                    <div class="card-actions justify-start">
+                        <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register
+                            Now!</button>
+                    </div>
                 </div>
-              </div>
+            </div>
 
-              <div class="card bg-base-100 shadow-xl image-full">
+            <div class="card bg-base-100 shadow-xl image-full">
                 <figure><img src="Images/3.png" alt="Shoes" /></figure>
                 <div class="card-body">
-                  <h2 class="card-title text-2xl mt-16 text-white mb-5">Teenager Program!</h2>
-                  <p>Our hockey club develops players to reach the next level in their careers with top-level coaching.</p>
-                  <div class="card-actions justify-start">
-                    <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register Now!</button>
-                  </div>
+                    <h2 class="card-title text-2xl mt-16 text-white mb-5">Teenager Program!</h2>
+                    <p>Our hockey club develops players to reach the next level in their careers with top-level
+                        coaching.</p>
+                    <div class="card-actions justify-start">
+                        <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register
+                            Now!</button>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
 
         <div class="container mx-auto flex mt-10">
             <div class="card flex-1 w-auto bg-base-100 shadow-xl image-full">
                 <figure><img class="w-auto flex-1" src="Images/4.png" alt="" /></figure>
                 <div class="card-body">
-                  <h2 class="card-title text-4xl mt-52 text-white mb-5">Professional Program !</h2>
-                  <p class="text-xl">Our focus is to provide an advanced development hockey program that encourages our players to set and achieve their goals, including their pursuit of the next level in their hockey career; develop leaders who will be successful in all areas of their life; and teach and challenge our players to be good teammates with high character. </p>
-                  <div class="card-actions justify-start">
-                    <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register Now!</button>
-                  </div>
+                    <h2 class="card-title text-4xl mt-52 text-white mb-5">Professional Program !</h2>
+                    <p class="text-xl">Our focus is to provide an advanced development hockey program that encourages
+                        our players to set and achieve their goals, including their pursuit of the next level in their
+                        hockey career; develop leaders who will be successful in all areas of their life; and teach and
+                        challenge our players to be good teammates with high character. </p>
+                    <div class="card-actions justify-start">
+                        <button class="btn btn-primary text-white bg-red-500 border-r-0 border-red-500">Register
+                            Now!</button>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
     </section>
 
+    <section class="">
+        <!-- Our new product -->
+        <div class="text-center mt-10 mb-10">
+            <h1 class="text-4xl font-bold text-zinc-950 pb-3">
+                Our New Products
+            </h1>
+            <p class="text-xl text-slate-600">
+            <p>
+                Wear the iconic white shirt personalised with your name or that of your favourite player and be part of
+                the Eagle passion with us!
+            </p>
+        </div>
+
+        <div class="flex items-center justify-center w-auto gap-10">
+            <div class="grid grid-cols-1 lg:grid-cols-2 shadow-xl lg:gap-14">
+                <!-- =======container------ -->
+                <!-- item-1 -->
+                <div class="flex flex-1 w-full">
+                    <div class="shadow-xl m-4">
+                        <img src="Images/5.png" alt="">
+                    </div>
+                    <div class="rating">
+                        <div class="my-4">
+                            <i class="fa-solid fa-star text-yellow-500"><span class=" ml-2 mr-4 text-black">5.0</span>
+                            </i>
+                            <i class="fa-solid fa-eye"><span class="ml-2">20</span></i>
+                            <i class="fa-regular fa-heart ml-2 mr-4"><span class="ml-2">200</span></i>
+                            <h4 class="text-xl font-extrabold my-4">Customizable jersey</h4>
+                            <p class="my-4">You can find products to match any style and any occasion.</p>
+                            <div class="flex gap-4 gap-y-4 lg:flex-col flex-row">
+                                <h4 class="text-xl font-bold text-orange-600">Price - $22.00</h4>
+                                <i class="fa-solid fa-cart-shopping items-center justify-center"><span
+                                        class="mb-4 lg:text-xl text-sm">&nbsp
+                                        Delivery Fee : Free</span> </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- item-2 -->
+                <div class="flex flex-1 w-full">
+                    <div class="shadow-xl m-4">
+                        <img src="Images/6.png" alt="">
+                    </div>
+                    <div class="rating">
+                        <div class="my-4">
+                            <i class="fa-solid fa-star text-yellow-500"><span class=" ml-2 mr-4 text-black">5.0</span>
+                            </i>
+                            <i class="fa-solid fa-eye"><span class="ml-2">20</span></i>
+                            <i class="fa-regular fa-heart ml-2 mr-4"><span class="ml-2">200</span></i>
+                            <h4 class="text-xl font-extrabold my-4">Customizable Ball</h4>
+                            <p class="my-4">You can find products to match any style and any occasion.</p>
+                            <div class="flex gap-4 gap-y-4">
+                                <h4 class="text-xl font-bold text-orange-600">Price - $22.00</h4>
+                                <i class="fa-solid fa-cart-shopping items-center justify-center"><span
+                                        class="mb-4">&nbsp
+                                        Delivery Fee : Free</span> </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- item-3-->
+                <div class="flex flex-1 w-full">
+                    <div class="shadow-xl m-4">
+                        <img src="Images/7.png" alt="">
+                    </div>
+                    <div class="rating">
+                        <div class="my-4">
+                            <i class="fa-solid fa-star text-yellow-500"><span class=" ml-2 mr-4 text-black">5.0</span>
+                            </i>
+                            <i class="fa-solid fa-eye"><span class="ml-2">20</span></i>
+                            <i class="fa-regular fa-heart ml-2 mr-4"><span class="ml-2">200</span></i>
+                            <h4 class="text-xl font-extrabold my-4">Cap For Hockeys</h4>
+                            <p class="my-4">You can find products to match any style and any occasion.</p>
+                            <div class="flex gap-4 gap-y-4">
+                                <h4 class="text-xl font-bold text-orange-600">Price - $22.00</h4>
+                                <i class="fa-solid fa-cart-shopping items-center justify-center"><span
+                                        class="mb-4">&nbsp
+                                        Delivery Fee : Free</span> </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- item-4 -->
+                <div class="flex flex-1 w-full">
+                    <div class="shadow-xl m-4">
+                        <img src="Images/8.png" alt="">
+                    </div>
+                    <div class="rating">
+                        <div class="my-4">
+                            <i class="fa-solid fa-star text-yellow-500"><span class=" ml-2 mr-4 text-black">5.0</span>
+                            </i>
+                            <i class="fa-solid fa-eye"><span class="ml-2">20</span></i>
+                            <i class="fa-regular fa-heart ml-2 mr-4"><span class="ml-2">200</span></i>
+                            <h4 class="text-xl font-extrabold my-4">Customizable womens jersey</h4>
+                            <p class="my-4">You can find products to match any style and any occasion.</p>
+                            <div class="flex gap-4 gap-y-4">
+                                <h4 class="text-xl font-bold text-orange-600">Price - $22.00</h4>
+                                <i class="fa-solid fa-cart-shopping items-center justify-center"><span
+                                        class="mb-4">&nbsp
+                                        Delivery Fee : Free</span> </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="flex flex-1 w-full">
+                    <!-- item-5 -->
+                    <div class="shadow-xl m-4">
+                        <img src="Images/9.png" alt="">
+                    </div>
+                    <div class="rating">
+                        <div class="my-4">
+                            <i class="fa-solid fa-star text-yellow-500"><span class=" ml-2 mr-4 text-black">5.0</span>
+                            </i>
+                            <i class="fa-solid fa-eye"><span class="ml-2">20</span></i>
+                            <i class="fa-regular fa-heart ml-2 mr-4"><span class="ml-2">200</span></i>
+                            <h4 class="text-xl font-extrabold my-4">Customizable helmet</h4>
+                            <p class="my-4">You can find products to match any style and any occasion.</p>
+                            <div class="flex gap-4 gap-y-4">
+                                <h4 class="text-xl font-bold text-orange-600">Price - $22.00</h4>
+                                <i class="fa-solid fa-cart-shopping items-center justify-center"><span
+                                        class="mb-4">&nbsp
+                                        Delivery Fee : Free</span> </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-1 w-full">
+                    <!-- item-6 -->
+                    <div class="shadow-xl m-4">
+                        <img src="Images/10.png" alt="">
+                    </div>
+                    <div class="rating">
+                        <div class="my-4">
+                            <i class="fa-solid fa-star text-yellow-500"><span class=" ml-2 mr-4 text-black">5.0</span>
+                            </i>
+                            <i class="fa-solid fa-eye"><span class="ml-2">20</span></i>
+                            <i class="fa-regular fa-heart ml-2 mr-4"><span class="ml-2">200</span></i>
+                            <h4 class="text-xl font-extrabold my-4">Customizable Ball</h4>
+                            <p class="my-4">You can find products to match any style and any occasion.</p>
+                            <div class="flex gap-4 gap-y-4">
+                                <h4 class="text-xl font-bold text-orange-600">Price - $22.00</h4>
+                                <i class="fa-solid fa-cart-shopping items-center justify-center"><span
+                                        class="mb-4">&nbsp
+                                        Delivery Fee : Free</span> </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <!-- client question section -->
+        <div class="text-center mt-10 mb-10">
+            <h1 class="text-4xl font-bold text-zinc-950 pb-3">
+                Clients Question
+            </h1>
+            <p class="text-xl text-slate-600">
+            <p>
+                we'll try our best able to find the answer you need, please contact our fly-eagle Store Support team,
+                available via Chat & email 24/7
+            </p>
+        </div>
+
+        <!-- accodianan  -->
+        <div class="flex flex-1">
+            <!-- --------special class for center element---- -->
+            <div class="items-center grid grid-cols-1 lg:grid-cols-2 lg:mx-auto justify-between gap-10">
+                <div class="flex flex-1 w-auto">
+                    <img src="Images/11.png" alt="">
+                </div>
+                <div class="w-full">
+                    <div class="collapse collapse-plus bg-white">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">
+                            Estimated Time of Delivery ?
+                        </div>
+                        <div class="collapse-content">
+                            <p>During this exceptionally busy period, orders may take up <br> to 14 working days to process, personalised items may take longer.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-white">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            Refunds & Returns: 
+                        </div>
+                        <div class="collapse-content">
+                            <p> please contact our eagle Store Support team, available via Chat & email 24/7</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-white">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            Shipment tracking information: 
+                        </div>
+                        <div class="collapse-content">
+                            <p>You'll find order tracking links in both your Order <br> confirmation and Shipment notification emails. If the courier partner is ASENDIA <br> you can use their website for updates using your tracking ID:</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-white">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            Alternatively Phone
+                        </div>
+                        <div class="collapse-content">
+                            <p>USA: 1 (888) 803-4360</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
 
 </body>
 
