--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 
-<body class="font-Manrope">
+<body class="font-Manrope m-auto">
     <header class="md:container md:mx-auto">
         <!-- ==== header first part === -->
         <nav>
@@ -388,10 +388,10 @@
         </div>
 
         <!-- accodianan  -->
-        <div class="flex flex-1">
+        <div class="flex flex-1 justify-center sm:m-2">
             <!-- --------special class for center element---- -->
             <div class="items-center grid grid-cols-1 lg:grid-cols-2 lg:mx-auto justify-between gap-10">
-                <div class="flex flex-1 w-auto">
+                <div class="flex flex-1 w-[287px] lg:w-auto m-auto">
                     <img src="Images/11.png" alt="">
                 </div>
                 <div class="w-full">
@@ -401,25 +401,25 @@
                             Estimated Time of Delivery ?
                         </div>
                         <div class="collapse-content">
-                            <p>During this exceptionally busy period, orders may take up <br> to 14 working days to process, personalised items may take longer.</p>
+                            <p>orders may take up to 14 working days to process</p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-white">
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
-                            Refunds & Returns: 
+                            Refunds & Returns:
                         </div>
                         <div class="collapse-content">
-                            <p> please contact our eagle Store Support team, available via Chat & email 24/7</p>
+                            <p> please contact our eagle Store Support/p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-white">
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
-                            Shipment tracking information: 
+                            Shipment tracking information:
                         </div>
                         <div class="collapse-content">
-                            <p>You'll find order tracking links in both your Order <br> confirmation and Shipment notification emails. If the courier partner is ASENDIA <br> you can use their website for updates using your tracking ID:</p>
+                            <p>You'll find order tracking mail:</p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-white">
@@ -435,10 +435,151 @@
             </div>
 
         </div>
-
-
     </section>
 
-</body>
+    <section class="">
+        <div class="text-center mt-10 mb-10">
+            <h1 class="text-4xl font-bold text-zinc-950 pb-3">
+                Get In Touch
+            </h1>
+            <p class="text-xl text-slate-600">
+            <p>
+                we'll try our best able to find the answer you need, please fill - up following form.
+            </p>
+        </div> <!-- get in touch section -->
+        <div class="flex flex-1 justify-center">
+            <div class="flex flex-col lg:flex-row gap-8">
+                <div class="flex flex-col gap-5 border border-solid p-10 rounded-2xl">
+                    <div class="p-10 bg-[#bced6d34] text-left rounded-2xl">
+                        <img src="/Images/Group 1171275317.png" alt="">
+                        <p class="text-[#13131857] font-medium mb-1 mt-8">Phone Number :</p>
+                        <h4 class="font-extrabold text-lg text-[#131318]">(+62) 123-676-543</h4>
+                    </div>
+                    <div class="p-10 bg-[#fddd5f2d] text-left rounded-2xl">
+                        <img src="/Images/Group 1171275318.png" alt="">
+                        <p class="text-[#13131857] font-medium mb-1 mt-8">Email :</p>
+                        <h4 class="font-extrabold text-lg text-[#131318]">flyingeagle@support.com</h4>
+                    </div>
+                    <div class="p-10 bg-[#629cf321] text-left rounded-2xl">
+                        <img src="/Images/Group 1171275321.png" alt="">
+                        <p class="text-[#13131857] font-medium mb-1 mt-8">Location :</p>
+                        <h4 class="font-extrabold text-lg text-[#131318]">yk.New Zealand:</h4>
+                    </div>
+                </div>
 
-</html>
+                <div class="lg:w-3/4 flex flex-col gap-10">
+                    <div class="flex gap-5 w-full lg:flex-row flex-col">
+                        <div class="flex flex-col w-[100%] lg:w-[50%]">
+                            <label class="font-bold text-[#131318] text-left mb-4" for="name">Your Name</label>
+                            <input class="p-3 rounded-xl bg-[#1313180a]" type="text" name="" id=""
+                                placeholder="Enter your full name">
+                        </div>
+                        <div class="flex flex-col w-[100%] lg:w-[50%]">
+                            <label class="font-bold text-[#131318] text-left mb-4" for="name">Your Email</label>
+                            <input class="p-3 rounded-xl bg-[#1313180a]" type="email" name="" id=""
+                                placeholder="Enter your email">
+                        </div>
+                    </div>
+                    <div class="flex gap-5 lg:flex-row flex-col">
+                        <div class="flex flex-col w-[100%] lg:w-[50%]">
+                            <label class="font-bold text-[#131318] text-left mb-4" for="name">Subject</label>
+                            <input class="p-3 rounded-xl bg-[#1313180a]" type="email" name="" id=""
+                                placeholder="Enter your subject">
+                        </div>
+                        <div class="flex flex-col w-[100%] lg:w-[50%]">
+                            <label class="font-bold text-[#131318] text-left mb-4" for="name">Phone Number</label>
+                            <input class="p-3 rounded-xl bg-[#1313180a]" type="email" name="" id=""
+                                placeholder="Enter your phone number">
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col w-[100%]">
+                        <label class="font-bold text-[#131318] text-left mb-4" for="name">Message</label>
+                        <textarea class="p-5 rounded-xl bg-[#1313180a] mb-5" name="" id="" cols="30" rows="17"
+                            placeholder="Enter your message"></textarea>
+                        <input class="btn bg-hockey-primary-bg text-white" type="button" value="Send Message">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section class="my-4 lg:my-10">
+        <!-- social media -->
+        <footer
+            class="footer footer-center p-10 bg-[#13131808] text-base-content rounded lg:w-[1170px] w-[335px] mx-auto">
+
+            <nav>
+                <div class="grid grid-flow-col gap-4">
+                    <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            class="fill-current">
+                            <path
+                                d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z">
+                            </path>
+                        </svg></a>
+                    <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            class="fill-current">
+                            <path
+                                d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z">
+                            </path>
+                        </svg></a>
+                    <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            class="fill-current">
+                            <path
+                                d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
+                            </path>
+                        </svg></a>
+                </div>
+            </nav>
+        </footer>
+    </section>
+    <section>
+        <!-- footer-end -->
+</body>
+<footer class="bg-black py-20 mt-20 text-white">
+    <div class="flex flex-col lg:flex-row justify-between items-center lg:items-start px-11 lg:px-40">
+        <div class="">
+            <h1 class="text-2xl font-bold">Get In Touch</h1>
+            <p>How can we help you today?</p>
+            <div class="">
+                <i class="fa-regular fa-envelope"></i>
+                <span class="mr-3">&nbsp &nbsp support@f.eagle.com</span>
+            </div>
+            <div class="">
+                <i class="fa-solid fa-phone"></i>
+                <span>5645-544-9638</span>
+                </p>
+            </div>
+        </div>
+
+        <div class="flex gap-7 lg:gap-60 lg:my-0 my-10">
+            <div class="">
+                <ul>
+                    <li>Services</li>
+                    <li>Branding</li>
+                    <li>Design</li>
+                    <li>Marketing</li>
+                    <li>Advertisement</li>
+                </ul>
+            </div>
+            <div class="">
+                <ul>
+                    <li class="opacity-4 leading-7"><a href="">Help Center</a></li>
+                    <li class="opacity-4 leading-7"><a href="">FAQ</a></li>
+                    <li class="opacity-4 leading-7"><a href="">Ticket Support</a></li>
+                    <li class="opacity-4"><a href="">Contact Us</a></li>
+                </ul>
+
+            </div>
+        </div>
+
+        <div class="">
+            <ul>
+                <li>Legal</li>
+                <li>Terms of use</li>
+                <li>Privacy policy</li>
+                <li>Cookie policy</li>
+            </ul>
+        </div>
+    </div>
+</footer>
