mandatory part done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 
-<body class="font-Manrope m-auto">
+<body class="font-Manrope m-auto px-5">
     <header class="md:container md:mx-auto">
         <!-- ==== header first part === -->
         <nav>
@@ -65,7 +65,7 @@
         </nav>
 
         <!-- == carosol section == -->
-        <div class="grid justify-items-center">
+        <div class="grid justify-items-center mx-auto">
             <div class="carousel  m-8 w-auto h-auto lg:w-auto lg:h-[550px] mt-9">
                 <div id="slide1" class="carousel-item relative w-full">
                     <img src="Images/1.png" class="w-full" />
@@ -105,7 +105,7 @@
                 authorities or organizations </p>
         </div>
         <div
-            class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mx-6 lg:mx-auto justify-between my-16 gap-8">
+            class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:mx-auto justify-between mx-auto my-16 gap-8">
             <!-- 1st item -->
             <div class="card w-96 bg-base-100 shadow-xl">
                 <figure>
