--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
+                    <div
+                    class="absolute items-end right-11 rounded-2xl p-8 bottom-5 hidden py-5 text-center bg-black text-white md:block">
+                    <h5 class="text-xl font-bold">Meet all the heroes from the field</h5>
+                    <p>
+                        Everything You Need in One Place.
+                    </p>
+                  </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full">
                     <img src="Images/4.png" class="w-full" />
@@ -80,6 +87,13 @@
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
                     </div>
+                                        <div
+                    class="absolute items-end right-11 rounded-2xl p-8 bottom-5 hidden py-5 text-center bg-black text-white md:block">
+                    <h5 class="text-xl font-bold">Meet all the heroes from the field</h5>
+                    <p>
+                        Everything You Need in One Place.
+                    </p>
+                  </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full">
                     <img src="Images/1.png" class="w-full" />
@@ -87,8 +101,19 @@
                         <a href="#slide2" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
                     </div>
+                    <!-- ============================= -->
+                    <div
+                    class="absolute items-end right-11 rounded-2xl p-8 bottom-5 hidden py-5 text-center bg-black text-white md:block">
+                    <h5 class="text-xl font-bold">Meet all the heroes from the field</h5>
+                    <p>
+                        Everything You Need in One Place.
+                    </p>
+                  </div>
                 </div>
             </div>
+
+            <!-- ----------test -->
+
         </div>
 
     </header>
